...
    }

    public var title: String {
        switch self {
        case .cadence: return "CO2 Tolerance Builder"
        case .hypoxicSprints: return "Hypoxic Sprints"
        case .co2Table: return "CO2 Table"
        case .o2Table: return "O2 Table"
        case .imt: return "Inspiratory Muscle Training"
        case .boltAssessment: return "BOLT Score"
        case .maxHoldAssessment: return "Max Breath Hold"
        case .breathCountAssessment: return "Single Breath Count"
        }
...
